update the changes for 1.1.0

--- a/app/idcloudaccesssample/src/main/res/layout/fragment_authentication.xml
+++ b/app/idcloudaccesssample/src/main/res/layout/fragment_authentication.xml
@@ -16,15 +16,38 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
-    <TextView
-        android:id="@+id/user_name"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/username"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:textSize="16sp"
-        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/title_userName"/>
+        app:layout_constraintTop_toBottomOf="@id/title_userName">
+
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"/>
+
+        <EditText
+            android:id="@+id/edit_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:minHeight="48dp"
+            android:textColorHint="#546E7A"
+            android:hint="@string/enter_your_username"
+            android:textSize="16sp"
+            android:singleLine="true"
+            android:importantForAutofill="no"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="parent"
+            android:visibility="gone"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/title_authentication_type"
@@ -35,7 +58,7 @@
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/user_name"/>
+        app:layout_constraintTop_toBottomOf="@id/username"/>
 
     <Spinner
         android:id="@+id/select_authentication_type"
