--- a/app/idcloudaccesssample/src/main/res/layout/fragment_home_screen.xml
+++ b/app/idcloudaccesssample/src/main/res/layout/fragment_home_screen.xml
@@ -7,26 +7,8 @@
     android:padding="20dp"
     tools:context=".ui.fragments.HomeScreenFragment">
 
-    <ImageView
-        android:id="@+id/imgSettings"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
-        android:src="@drawable/ic_baseline_settings_24"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/txtIDCloudAccess"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="@string/idcloud_access"
-        android:textColor="@color/black"
-        android:textSize="25sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:ignore="MissingConstraints" />
-
+    <include android:id="@+id/top_view"
+        layout="@layout/content_top" />
 
     <androidx.fragment.app.FragmentContainerView
         android:layout_marginTop="24dp"
@@ -36,7 +18,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/txtIDCloudAccess"
+        app:layout_constraintTop_toBottomOf="@id/top_view"
         app:defaultNavHost="false"
         app:navGraph="@navigation/home_nav_graph" />
 
@@ -44,7 +26,7 @@
     <TextView
         android:id="@+id/txtLogs"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="350dp"
         android:layout_marginTop="12dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/rectangle_frame"
